[package]
name = "r-multipart"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.5.0"
actix-web = "4.2.1"
futures-util = "0.3.25"
image = "0.24.5"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["fs"] }
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
actix-cors = "0.7"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }

